--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,55 @@ h2 {
     font-size: 32px;
 }
 
-.area-title {
-    background-color: #666666;
+.navbar-default {
+	background-color: #3A3A3A;
+	border-top: 0px solid #3A3A3A;
+	border-right: 0px solid #3A3A3A;
+	border-left: 0px solid #3A3A3A;
+	border-bottom: 3px solid #2D2D2D;
+	
+	font-family: Chivo;
+	font-weight: bold;
+	font-size: 16px;
+}
+
+/* Title */
+.navbar-default .navbar-brand {
+	color: #00D080;
+	
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+    color: #55ffbf;
+}
+/* Link */
+.navbar-default .navbar-nav > li > a {
+    color: #00D080;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+    color: #55ffbf;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #00D080;
+}
+.dropdown-menu {
+	background-color: #3A3A3A;
+}
+.dropdown-menu > li {
+	background-color: #3A3A3A;
+	border: 0px solid #3A3A3A;
+}
+.dropdown-menu > li > a {
+	color: #00D080;
+}
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+    color: #55ffbf;
+    background-color: #535353;
+}
+.navbar-default .navbar-nav > li > p {
+	color: #00D080;
 }
