--- a/css/custom.css
+++ b/css/custom.css
@@ -62,7 +62,7 @@ h2 {
     background-color: #3A3A3A;
     border-width: 10px 0px 0px 0px;
     border-style: solid;
-    border-color: #2D2D2D;
+    border-color: #72a8ff;
 }
 
 
